Fixed #7, next button no longer slides out into right sidebar space when stuck to top edge of viewport.

--- a/scss/src/_mathbook.scss
+++ b/scss/src/_mathbook.scss
@@ -393,6 +393,7 @@ body {
 
     .next-button-sticky-wrapper, .next-button {
         float:right;
+        width:$navbar-icon-box-size;
 
         .next-button {
             float:none;
@@ -400,6 +401,7 @@ body {
     }
     .previous-button-sticky-wrapper, .previous-button {
         float:left;
+        width:$navbar-icon-box-size;
 
         .previous-button {
             float:none;
